--- a/main.tex
+++ b/main.tex
@@ -240,6 +240,7 @@ This book introduces digital communication through probability.
 \input{manual/gvv_manual_ee5837.tex}
 \chapter{Random Processes}
 \chapter{Error Correcting Codes}
+\input{ncert/ecc.tex}
 
 %\include{ch02} 
 \backmatter
